--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
     "needsBuild": true
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "fs-extra": "^11.1.0",
-    "node-fetch": "^3.3.0",
     "tar": "^6.1.13"
   },
   "devDependencies": {
     "@rcv-prod-toolkit/types": "github:rcv-prod-toolkit/types",
     "@types/fs-extra": "^9.0.12",
-    "@types/node-fetch": "^2.5.12",
     "@types/tar": "^6.1.3",
     "typescript": "^4.9.4"
   },
