--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "plugin": {
       "main": "dist/plugin.js"
     },
+    "toolkitVersion": ">=1.8",
     "needsBuild": true
   },
   "dependencies": {
